2006-03-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (buildConfig):
	New discovery parameter: RFC2863_IF_MIB::subtree-comment

	* perllib/Torrus/Renderer/Frontpage.pm (renderUserLogin):
	New config option: $Torrus::Renderer::lostPasswordURL

2006-03-01  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/HTML.pm:
	New config variable: $Torrus::Renderer::companyLogo
	to display a logo instead of text

2006-02-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm: 'comment' parameter is copied
	from DDX to the host level.

2006-02-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Monitor.pm: New monitor parameters:
	display-rpn-expr display-format
	(run_event_exec): New environment variable: TORRUS_DISPLAY_VALUE

2006-02-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm (discover):
	New discovery parameter: suppress-legend

2006-02-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	Complex matching expressions for subtree name selector 

	* perllib/Torrus/DevDiscover/CiscoGeneric.pm (discover):
	Cisco power supply monitoring

2006-02-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/action_notify.in: New monitor action

	* perllib/Torrus/Monitor.pm:
	New monitor parameter: "severity"

	* perllib/Torrus/DevDiscover/CiscoIOS.pm: Cisco Docsis bundle
	interfaces excluded from discovery

2006-01-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/RPN.pm: New RPM functions: INF, NEGINF

2005-12-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/RPN.pm: DUP and EXC accept undefined arguments now

2005-12-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/RPN.pm: New RPN function: NUM
